--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Special+Elite&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Special+Elite&display=swap');
 
 * {
-    background-color: white;
-    font-family: 'Poppins', sans-serif;
+    background-color: #ffffff;
+    font-family: 'Maven Pro', sans-serif;
     color: black;
 }
 
@@ -23,6 +23,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
+
 }
 
 ul {
@@ -31,7 +32,7 @@ ul {
 
 li a {
     display: block;
-    font-size: 16px;
+    font-size: 20px;
     text-align: center;
     padding: 10px 20px;
     text-decoration: none;
@@ -56,34 +57,10 @@ li a:hover:not(.active) {
 }
 
 .title h1 {
-    font-size: 60px;
+    font-size: 64px;
     font-weight: 600;
     text-align: center;
     margin: 0;
-}
-
-.dailyQuote-title {
-    border-top: 0.5px solid #cbcbcb;
-    width: 100%;
-}
-
-.dailyQuote-title h1 {
-    font-size: 60px;
-    font-weight: 600;
-    text-align: center;
-    margin: 0 0 40px 0;
-}
-
-.authors-title {
-    border-top: 0.5px solid #cbcbcb;
-    width: 100%;
-}
-
-.authors-title h1 {
-    font-size: 60px;
-    font-weight: 600;
-    text-align: center;
-    margin: 0
 }
 
 .subtitle {
@@ -93,20 +70,7 @@ li a:hover:not(.active) {
 
 .subtitle h3 {
     font-weight: 400;
-    font-size: 24px;
-    text-align: center;
-    width: 80%;
-}
-
-.authors-subtitle {
-    width: 100%;
-    border-bottom: 0.5px solid #cbcbcb;
-    margin: 0 0 20px 0;
-}
-
-.authors-subtitle h3 {
-    font-weight: 400;
-    font-size: 24px;
+    font-size: 26px;
     text-align: center;
 }
 
@@ -243,13 +207,13 @@ li a:hover:not(.active) {
 }
 
 .author-name {
-    font-size: 20px;
+    font-size: 26px;
     margin: 0 0 10px 0;
 }
 
 .author-bio {
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 20px;
+    line-height: 1.25;
     margin: 0;
 }
 
@@ -261,11 +225,12 @@ li a:hover:not(.active) {
 }
 
 .pagination-btn {
-    font-size: 20px;
+    font-size: 22px;
     height: fit-content;
     width: fit-content;
     border-radius: 6px;
     box-shadow: 0 6px #bfbfbf;
+    padding: 6px;
 }
 
 .pagination-btn:hover {
@@ -325,4 +290,61 @@ li a:hover:not(.active) {
     100% {
         transform: rotate(360deg);
     }
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 3000px;
+    margin: 60px 0 0 0;
+}
+
+.form-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.form-input {
+    width: 100%;
+    padding: 12px;
+    border: solid 2px #787878;
+    border-radius: 4px;
+    margin-bottom: 12px;
+    box-sizing: border-box;
+    font-size: 20px;
+}
+
+.form-input-name {
+    margin-right: 6px;
+}
+
+.form-input-message {
+    height: 250px;
+    width: 800px;
+    resize: none;
+}
+
+.submit-btn {
+    font-size: 28px;
+    font-weight: 600;
+    cursor: pointer;
+    border: 1px solid #545454;
+    border-radius: 6px;
+    background-color: #ffffff;
+    text-align: center;
+    padding: 8px 12px;
+    box-shadow: 0 10px #bfbfbf;
+    margin: 0;
+}
+
+.form-button:active {
+    box-shadow: 0 6px #909090;
+    transform: translateY(4px);
+}
+
+.thank-you-message {
+    margin: 100px 0 0 0;
+    font-size: 30px;
 }
