--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-
+    font-size: 20px;
 }
 
 ul {
@@ -34,11 +34,9 @@ ul {
 
 li a {
     display: block;
-    font-size: 20px;
     text-align: center;
     padding: 10px 20px;
     text-decoration: none;
-
 }
 
 li a:hover:not(.active) {
@@ -56,6 +54,7 @@ li a:hover:not(.active) {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 10px;
 }
 
 .title h1 {
@@ -68,6 +67,7 @@ li a:hover:not(.active) {
 .subtitle {
     display: flex;
     justify-content: center;
+    padding: 0 10px 0 10px;
 }
 
 .subtitle h3 {
@@ -177,17 +177,17 @@ li a:hover:not(.active) {
     background-color: #ffffff;
     text-align: center;
     padding: 8px 12px;
-    box-shadow: 6px 6px 4px #808080;
+    box-shadow: 0 8px #bfbfbf;
     margin: 0 0 50px 0;
 }
 
 .quote-btn:hover {
-    background-color: #cfcfcf;
+    background-color: #eaeaea;
 }
 
 .quote-btn:active {
-    background-color: #cfcfcf;
-    box-shadow: 6px 6px 4px #808080;
+    background-color: #eaeaea;
+    box-shadow: 0 4px #909090;
     transform: translateY(4px);
 }
 
@@ -204,7 +204,6 @@ li a:hover:not(.active) {
 .social-media-icons {
     display: flex;
     flex-direction: row;
-    gap: 32px;
 }
 
 .twitter-sharing {
@@ -212,7 +211,7 @@ li a:hover:not(.active) {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 40px 0 0 0;
+    margin: 20px 0 0 0;
     font-size: 18px;
 }
 
@@ -228,13 +227,13 @@ li a:hover:not(.active) {
 }
 
 .search-container {
-    margin: 20px 0 0 0;
+    margin: 20px 0 20px 0;
 }
 
 #search-button,
 #search-input,
 .search-container {
-    font-size: 18px;
+    font-size: 20px;
     padding: 6px;
 }
 
@@ -248,9 +247,15 @@ li a:hover:not(.active) {
     border: 1px solid;
     border-radius: 8px;
     box-shadow: 0 4px #bfbfbf;
+    font-weight: 500;
+}
+
+#search-button:hover {
+    background-color: #eaeaea;
 }
 
 #search-button:active {
+    background-color: #eaeaea;
     box-shadow: 0 2px #909090;
     transform: translateY(2px);
 }
@@ -260,6 +265,7 @@ li a:hover:not(.active) {
     font-weight: 600;
     text-align: center;
     margin: 60px 0 60px 0;
+    display: none;
 }
 
 .list-container {
@@ -299,15 +305,21 @@ li a:hover:not(.active) {
     margin: 0;
 }
 
+.list-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
 .pagination-container {
     display: flex;
-    gap: 30px;
+    gap: 10px;
     align-items: center;
     margin: 0 0 20px 0
 }
 
 .pagination-btn {
-    font-size: 22px;
+    font-size: 20px;
     height: fit-content;
     width: fit-content;
     border-radius: 6px;
@@ -317,10 +329,12 @@ li a:hover:not(.active) {
 }
 
 .pagination-btn:hover {
+    background-color: #eaeaea;
     cursor: pointer;
 }
 
 .pagination-btn:active {
+    background-color: #eaeaea;
     box-shadow: 0 2px #909090;
     transform: translateY(2px);
 }
@@ -338,47 +352,49 @@ li a:hover:not(.active) {
     font-weight: 600;
 }
 
-
-.lds-ring {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80px;
-    height: 80px;
-    margin: 50px 0 0 0;
-}
-
-.lds-ring div {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border: 8px solid #515151;
+.loader,
+.loader:after {
     border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #515151 transparent transparent transparent;
+    width: 10em;
+    height: 10em;
 }
 
-.lds-ring div:nth-child(1) {
-    animation-delay: -0.45s;
+.loader {
+    margin: 30px 0 50px 0;
+    font-size: 8px;
+    position: relative;
+    text-indent: -9999em;
+    border-top: 1.1em solid rgba(81, 81, 81, 0.2);
+    border-right: 1.1em solid rgba(81, 81, 81, 0.2);
+    border-bottom: 1.1em solid rgba(81, 81, 81, 0.2);
+    border-left: 1.1em solid #515151;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
 }
 
-.lds-ring div:nth-child(2) {
-    animation-delay: -0.3s;
-}
-
-.lds-ring div:nth-child(3) {
-    animation-delay: -0.15s;
-}
-
-@keyframes lds-ring {
+@-webkit-keyframes load8 {
     0% {
+        -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
     }
 
     100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
     }
 }
@@ -386,7 +402,7 @@ li a:hover:not(.active) {
 .form-container {
     display: flex;
     flex-direction: column;
-    max-width: 3000px;
+    width: 50%;
     margin: 60px 0 0 0;
 }
 
@@ -412,8 +428,8 @@ li a:hover:not(.active) {
 }
 
 .form-input-message {
-    height: 250px;
-    width: 800px;
+    height: 300px;
+    width: 100%;
     resize: none;
 }
 
@@ -425,17 +441,340 @@ li a:hover:not(.active) {
     border-radius: 6px;
     background-color: #ffffff;
     text-align: center;
-    padding: 8px 12px;
-    box-shadow: 0 10px #bfbfbf;
+    padding: 4px 0 4px 0;
+    box-shadow: 0 8px #bfbfbf;
     margin: 0;
 }
 
+.submit-btn:hover {
+    background-color: #eaeaea;
+}
+
 .submit-btn:active {
-    box-shadow: 0 6px #909090;
+    background-color: #eaeaea;
+    box-shadow: 0 4px #909090;
     transform: translateY(4px);
 }
 
 .thank-you-message {
     margin: 100px 0 0 0;
     font-size: 30px;
+}
+
+@media (max-width: 1024px) {
+    .navbar {
+        font-size: 18px;
+    }
+
+    .navbar li {
+        flex-grow: 1;
+    }
+
+    li a {
+        padding: 5px 10px;
+    }
+
+    .title h1 {
+        font-size: 40px;
+    }
+
+    .subtitle h3 {
+        font-size: 16px;
+    }
+
+    .container {
+        margin: 0;
+        padding: 0;
+    }
+
+    .content {
+        flex-direction: column;
+    }
+
+    .image-container {
+        margin: 0 0 40px 0;
+        padding: 0;
+    }
+
+    .author-image {
+        width: 200px;
+        height: 200px;
+    }
+
+    .quote-container {
+        margin: 0 40px 0 40px;
+        padding: 0 40px 0 40px;
+    }
+
+    #quote {
+        font-size: 1.5rem;
+    }
+
+    #author {
+        font-size: 1.2rem;
+    }
+
+    #quote::before,
+    #quote::after {
+        position: absolute;
+        font-size: 4rem;
+        width: 4rem;
+        height: 4rem;
+    }
+
+    #quote::before {
+        left: -3rem;
+        top: -2rem;
+    }
+
+    #quote::after {
+        right: -5rem;
+        bottom: -3rem;
+    }
+
+    .quote-btn {
+        font-size: 20px;
+    }
+
+    .search-container {
+        margin: 10px 0 10px 0;
+    }
+
+    #search-button,
+    #search-input,
+    .search-container {
+        font-size: 14px;
+        padding: 3px;
+    }
+
+    #author-list {
+        padding: 0 10px 0 10px;
+    }
+
+    .author-image-list {
+        width: 125px;
+        height: 125px;
+    }
+
+    .author-item {
+        margin: 0 0 10px 0;
+    }
+
+    .author-name {
+        font-size: 20px;
+    }
+
+    .author-bio {
+        font-size: 14px;
+    }
+
+    .current-page,
+    .total-pages,
+    .pagination-btn {
+        font-size: 14px;
+    }
+
+    .pagination-container {
+        margin: 0;
+    }
+
+    .pagination-btn {
+        padding: 3px;
+    }
+
+    .form-container {
+        margin: 40px 0 0 0;
+        width: 80%;
+    }
+
+    .form-input {
+        font-size: 16px;
+    }
+
+    .form-input-message {
+        height: 200px;
+    }
+
+    .submit-btn {
+        font-size: 16px;
+        box-shadow: 0 4px #bfbfbf;
+    }
+}
+
+@media (max-width: 375px) {
+    .navbar {
+        font-size: 12px;
+    }
+
+    .navbar li {
+        flex-grow: 1;
+    }
+
+    .title-container {
+        padding: 10px 0 5px 0;
+    }
+
+    .title h1 {
+        font-size: 26px;
+        padding: 0 5px 0 5px;
+    }
+
+    li a {
+        padding: 5px 10px;
+    }
+
+    .subtitle h3 {
+        font-size: 12px;
+    }
+
+    .loader,
+    .loader:after {
+        width: 3em;
+        height: 3em;
+    }
+
+    .container {
+        margin: 0;
+        padding: 0;
+    }
+
+    .content {
+        flex-direction: column;
+        padding: 10px 0 0 0;
+    }
+
+    .image-container {
+        margin: 0 0 30px 0;
+        padding: 0;
+    }
+
+    .author-image {
+        width: 125px;
+        height: 125px;
+    }
+
+    .quote-container {
+        margin: 0 20px 0 20px;
+        padding: 0 20px 0 20px;
+    }
+
+    #quote {
+        font-size: 1rem;
+        margin: 0 10px 0 10px;
+    }
+
+    #author {
+        font-size: 0.7rem;
+        margin: 0;
+    }
+
+    #quote::before,
+    #quote::after {
+        position: absolute;
+        font-size: 2.75rem;
+        width: 2.75rem;
+        height: 2.75rem;
+    }
+
+    #quote::before {
+        left: -2rem;
+        top: -1.5rem;
+    }
+
+    #quote::after {
+        right: -3rem;
+        bottom: -2rem;
+    }
+
+    .quote-btn {
+        font-size: 14px;
+        padding: 4px 6px;
+        box-shadow: 0 4px #bfbfbf;
+        margin: 0 0 20px 0;
+    }
+
+    .quote-btn:active {
+        box-shadow: 0 2px #909090;
+    }
+
+    .twitter-sharing {
+        margin: 0;
+        font-size: 12px;
+    }
+
+    .twitter-sharing i {
+        font-size: 40px;
+    }
+
+    .search-container {
+        margin: 10px 0 10px 0;
+    }
+
+    #search-button,
+    #search-input,
+    .search-container {
+        font-size: 12px;
+        padding: 2px;
+        margin: 5px 0 5px 0;
+    }
+
+    #author-list {
+        padding: 0 5px 0 5px;
+    }
+
+    .author-image-container-list {
+        margin: 7.5px;
+    }
+
+    .author-image-list {
+        width: 75px;
+        height: 75px;
+    }
+
+    .author-item {
+        margin: 0 0 7.5px 0;
+    }
+
+    .author-name {
+        font-size: 14px;
+        margin: 0 0 2.5px 0;
+    }
+
+    .author-bio {
+        font-size: 10px;
+    }
+
+    .current-page,
+    .total-pages,
+    .pagination-btn {
+        font-size: 12px;
+    }
+
+    .pagination-container p {
+        font-size: 12px;
+    }
+
+    .form-container {
+        margin: 10px 0 0 0;
+        width: 80%;
+    }
+
+    .form-input {
+        font-size: 12px;
+        padding: 6px;
+        margin-bottom: 8px;
+    }
+
+    .form-input-message {
+        height: 125px;
+    }
+
+    .submit-btn {
+        font-size: 12px;
+        box-shadow: 0 4px #bfbfbf;
+    }
+
+    .submit-btn:active {
+        box-shadow: 0 2px #909090;
+    }
 }
